syntax = "proto3";

option go_package = "./pkg/logchain";

// The service definition.
service LogChain {
  // Sends a greeting
  rpc Log (LogRequest) returns (LogResponse) {}
}

// The request message containing the user's name.
message LogRequest {
  string app_name = 1;
  bytes log_line = 2;
  repeated string labels = 3;
  string log_level = 4;
  int64 timestamp = 5;
}

enum Loglevel {
  PANIC = 0;
  ALERT = 1;
  CRITICAL = 2;
  ERROR = 3;
  WARNING = 4;
  NOTICE = 5;
  INFO = 6;
  DEBUG = 7;
  FATAL = 8;
  TRACE = 9;
}

// The response message containing the greetings
message LogResponse {
  bool status = 1;
}
